# zxsinclair.net

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  README.md  url.md  zxsinclair.net.sln
Tests/: Tests.sln
Tests/FasterCanvasPixelBlazorApp/: FasterCanvasPixelBlazorApp.sln  Program.cs  _Imports.razor
Tests/MultiTargetFrameworkTest/: EmptyClass.cs  MultiTargetFrameworkTest.csproj  Program.cs
Tests/SDL2-CS/: SDL2-CS.csproj
Tests/TestHighPerformanceTimer/: Clock.cs  HiResTimer.cs  HighResolutionDateTime.cs  Program.cs  TestHighPerformanceTimer.csproj  Ticks.cs  Timer.cs  Z80.cs
Tests/TestSDL/: Program.cs  TestSDL.csproj
Tests/TestSDLEmbedding/: Program.cs  TestSDLEmbedding.csproj
ZXSinclair.Net/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  ZXSinclair.Net.csproj
ZXSinclair.Net.Generate.Z80OpCodes/: OpCodeArgs.cs  Opcodes.cs  Program.cs  ZXSinclair.Net.Generate.Z80OpCodes.csproj
ZXSinclair.Net.Test/: HelperNumber.cs  Program.cs  ZXSinclair.Net.Test.csproj  clsTests.cs
ZXSinclair.Net.ZX80_81/: Class1.cs
ZXSinclair.Perform/: Program.cs  ZXSinclair.Perform.csproj  _Imports.razor
ZXSinclair.Test/: FlagsTest.cs  Z80OpCodesTest.LD_R_R1.cs  Z80OpCodesTest.cs  ZXSinclair.Test.csproj
builderCodes/: builderCodes.sln
src/: CMakeLists.txt  Makefile  pch.h  z80.h  z80_core.cpp  z80_enum_opcodes.h  z80_opcodes.cpp  z80_opcodes.h
test/: CMakeLists.txt  main.cpp  pch.h  regstest.cpp  z80opcodestest.cpp
zxsinclair.net/: Program.cs  _Imports.razor  zxsinclair.net.csproj  zxsinclair.net.sln
(+194 files in other folders)
